--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-onclickout": "^2.0.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "react-scroll": "^1.7.12"
